[gd_scene load_steps=2 format=3 uid="uid://yejr8anm2th1"]

[ext_resource type="Script" uid="uid://dgort3d6xfdwx" path="res://demos/condition_test.gd" id="1_kger7"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kger7")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -60.0
offset_right = 29.5
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Valor :"

[node name="nn" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Esto es:"

[node name="vv" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
text = "p1"

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
text = "p2"

[node name="ttt" type="Label" parent="GridContainer"]
layout_mode = 2
text = "V"

[node name="ttt2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "V"

[node name="ttt3" type="Label" parent="GridContainer"]
layout_mode = 2
text = "V"

[node name="ttt4" type="Label" parent="GridContainer"]
layout_mode = 2
text = "V"

[connection signal="pressed" from="GridContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_button_2_pressed"]
